@@ -22,49 +22,63 @@ import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.control.shipping.server.control.ShippingControl;
+import com.echothree.model.data.shipping.server.entity.ShippingMethod;
+import com.echothree.model.data.shipping.server.factory.ShippingMethodFactory;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetShippingMethodsCommand
-        extends BaseSimpleCommand<GetShippingMethodsForm> {
-    
+        extends BaseMultipleEntitiesCommand<ShippingMethod, GetShippingMethodsForm> {
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.ShippingMethod.name(), SecurityRoles.List.name())
-                        )))
-                )));
-        
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+                ))
+        ));
+
+        FORM_FIELD_DEFINITIONS = List.of();
     }
 
     /** Creates a new instance of GetShippingMethodsCommand */
     public GetShippingMethodsCommand(UserVisitPK userVisitPK, GetShippingMethodsForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
     @Override
-    protected BaseResult execute() {
+    protected Collection<ShippingMethod> getEntities() {
         var shippingControl = Session.getModelController(ShippingControl.class);
+
+        return shippingControl.getShippingMethods();
+    }
+
+    @Override
+    protected BaseResult getResult(Collection<ShippingMethod> entities) {
         var result = ShippingResultFactory.getGetShippingMethodsResult();
-        
-        result.setShippingMethods(shippingControl.getShippingMethodTransfers(getUserVisit()));
-        
+
+        if(entities != null) {
+            var shippingControl = Session.getModelController(ShippingControl.class);
+
+            if(session.hasLimit(ShippingMethodFactory.class)) {
+                result.setShippingMethodCount(shippingControl.countShippingMethods());
+            }
+
+            result.setShippingMethods(shippingControl.getShippingMethodTransfers(getUserVisit(), entities));
+        }
+
         return result;
     }
-    
+
 }
